--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     document.getElementById("getBiasBtn").addEventListener("click", function() {
         // API NewsCatcher mise à jour avec votre clé API
         const newsAPIUrl = "https://api.newscatcherapi.com/v3/latest_headlines?when=1h&by_parse_date=false&page=1&page_size=100";
-        const newsAPIKey = "FeWY0zuchvFUvr7rW_l3r631ei40Vj7V";
+        const newsAPIToken = "FeWY0zuchvFUvr7rW_l3r631ei40Vj7V";
         const mbfcAPIUrl = "https://sheetdb.io/api/v1/p3dkx7064mky2";
         const mbfcBearerToken = "Bearer hfc8ufkknwmc4r7kpgcrw4faarzoobn5264m7159";
 
