--- a/index.html
+++ b/index.html
@@ -1,149 +1,101 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Articles de France - NewsCatcher API</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Articles sur la France</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
 
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
 
-        h1 {
-            text-align: center;
-            color: #333;
-        }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
 
-        .articles {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
+    .article {
+      background-color: #fff;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 5px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
 
-        .article {
-            background-color: #fafafa;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s;
-        }
+    .article h2 {
+      margin: 0 0 10px;
+      font-size: 18px;
+      color: #333;
+    }
 
-        .article:hover {
-            transform: translateY(-10px);
-        }
+    .article p {
+      color: #666;
+    }
 
-        .article img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .article-content {
-            padding: 15px;
-        }
-
-        .article-content h2 {
-            font-size: 18px;
-            margin: 0 0 10px;
-            color: #333;
-        }
-
-        .article-content p {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 10px;
-        }
-
-        .article-content .source {
-            font-weight: bold;
-            font-size: 12px;
-            color: #007bff;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 30px;
-            color: #888;
-        }
-
-    </style>
+    .article a {
+      text-decoration: none;
+      color: #1e90ff;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Articles sur la France</h1>
+    <div id="articles-container"></div>
+  </div>
 
-<div class="container">
-    <h1>Derniers Articles de France</h1>
-    <div class="articles" id="articles"></div>
-</div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const articlesContainer = document.getElementById("articles-container");
 
-<footer>
-    <p>© 2024 NewsCatcher API - Articles de France</p>
-</footer>
+      async function fetchArticles() {
+        try {
+          const response = await fetch("http://localhost:5000/api/articles");
+          const data = await response.json();
+          displayArticles(data.articles.results);
+        } catch (error) {
+          console.error("Erreur lors du chargement des articles:", error);
+          articlesContainer.innerHTML = "<p>Erreur lors du chargement des articles.</p>";
+        }
+      }
 
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        console.log("DOM content loaded");
+      function displayArticles(articles) {
+        articlesContainer.innerHTML = ""; // Clear any existing content
+        articles.forEach((article) => {
+          const articleDiv = document.createElement("div");
+          articleDiv.className = "article";
 
-        fetch('http://localhost:3000/news')  // L'URL de votre backend
-            .then(response => {
-                console.log("Réponse de fetch reçue", response);
-                if (!response.ok) {
-                    throw new Error('Erreur dans la réponse de l\'API : ' + response.status);
-                }
-                return response.json();
-            })
-            .then(data => {
-                console.log("Données JSON reçues de l'API :", data);
-                const articlesContainer = document.getElementById('articles');
+          const title = document.createElement("h2");
+          title.textContent = article.title;
 
-                // Vérifier si des articles sont présents
-                if (data.articles && data.articles.length > 0) {
-                    console.log("Nombre d'articles récupérés :", data.articles.length);
-                    data.articles.forEach(article => {
-                        console.log("Article actuel : ", article);
-                        
-                        // Créer la carte de l'article
-                        const articleElement = document.createElement('div');
-                        articleElement.classList.add('article');
+          const description = document.createElement("p");
+          description.textContent = article.body;
 
-                        // Assurer qu'il y a une image, sinon ajouter une image par défaut
-                        const imageUrl = article.media ? article.media : 'https://via.placeholder.com/300x200?text=No+Image';
-                        console.log("Image URL :", imageUrl);
+          const link = document.createElement("a");
+          link.href = article.url;
+          link.textContent = "Lire l'article complet";
+          link.target = "_blank";
+          link.rel = "noopener noreferrer";
 
-                        articleElement.innerHTML = `
-                            <img src="${imageUrl}" alt="Image de l'article">
-                            <div class="article-content">
-                                <h2>${article.title}</h2>
-                                <p>${article.description ? article.description : 'Aucune description disponible.'}</p>
-                                <span class="source">${article.rights ? article.rights : 'Source inconnue'}</span>
-                            </div>
-                        `;
+          articleDiv.appendChild(title);
+          articleDiv.appendChild(description);
+          articleDiv.appendChild(link);
 
-                        // Ajouter l'article au conteneur des articles
-                        articlesContainer.appendChild(articleElement);
-                    });
-                } else {
-                    console.log("Aucun article trouvé dans la réponse de l'API.");
-                    articlesContainer.innerHTML = '<p>Aucun article disponible pour le moment.</p>';
-                }
-            })
-            .catch(error => {
-                console.error('Erreur lors de la récupération des articles :', error);
-                document.getElementById('articles').innerHTML = '<p>Erreur lors de la récupération des articles.</p>';
-            });
+          articlesContainer.appendChild(articleDiv);
+        });
+      }
+
+      fetchArticles();
     });
-</script>
-
+  </script>
 </body>
 </html>
