--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Articles sur la France</title>
+  <title>Articles classés par catégories</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -68,7 +68,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Articles sur la France</h1>
+    <h1>Articles classés par catégories</h1>
     <div id="categories-container"></div>
   </div>
 
@@ -90,15 +90,15 @@
       function displayCategories(categories) {
         categoriesContainer.innerHTML = ""; // Efface le contenu existant
 
-        for (const [category, articles] of Object.entries(categories)) {
+        categories.forEach((category) => {
           const categoryDiv = document.createElement("div");
           categoryDiv.className = "category";
 
           const categoryTitle = document.createElement("h2");
-          categoryTitle.textContent = category;
+          categoryTitle.textContent = category.category;
           categoryDiv.appendChild(categoryTitle);
 
-          articles.forEach((article) => {
+          category.articles.forEach((article) => {
             const articleDiv = document.createElement("div");
             articleDiv.className = "article";
 
@@ -127,7 +127,7 @@
           });
 
           categoriesContainer.appendChild(categoryDiv);
-        }
+        });
       }
 
       fetchArticles();
