--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <script>
     async function fetchArticles() {
       try {
-        const response = await fetch("http://0.0.0.0:3000/api/articles");
+        const response = await fetch("http://localhost:3000/api/articles");
         const data = await response.json();
         displayCategories(data.categories);
       } catch (error) {
