--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   <script>
     async function fetchArticles() {
       try {
-        const response = await fetch("http://localhost:3000/api/articles");
+        // Remplace localhost par l'IP de ton ordinateur
+        const response = await fetch("http://192.168.1.33:3000/api/articles");
         const data = await response.json();
         displayCategories(data.categories);
       } catch (error) {
