--- a/index.html
+++ b/index.html
@@ -50,23 +50,93 @@
   <div id="categories-container"></div>
 
   <script>
+    const apiKey = "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"; // Remplace par ton jeton d'API Hugging Face
+
     async function fetchArticles() {
       try {
-        // Remplace localhost par l'IP de ton ordinateur
-        const response = await fetch("http://192.168.1.33:3000/api/articles");
+        const response = await fetch("https://newsdata.io/api/1/news?apikey=pub_57681345fb44cee51df2204a2a9361e4fd97a&country=fr&language=fr&category=politics");
         const data = await response.json();
-        displayCategories(data.categories);
+        const articles = data.results;
+        
+        // Récupérer les embeddings pour chaque article
+        const embeddings = await getEmbeddings(articles.map(article => article.title));
+        
+        // Regrouper les articles par similarité
+        const categorizedArticles = categorizeArticles(articles, embeddings);
+        displayCategories(categorizedArticles);
       } catch (error) {
         console.error("Erreur lors du chargement des articles:", error);
         document.getElementById("categories-container").innerHTML = "<p>Erreur lors du chargement des articles.</p>";
       }
     }
 
-    function displayCategories(categories) {
+    // Fonction pour obtenir les embeddings depuis l'API Hugging Face
+    async function getEmbeddings(titles) {
+      const embeddings = [];
+      for (const title of titles) {
+        const response = await fetch("https://api-inference.huggingface.co/models/sentence-transformers/all-MiniLM-L6-v2", {
+          method: "POST",
+          headers: {
+            Authorization: `Bearer ${apiKey}`,
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ inputs: title })
+        });
+        const data = await response.json();
+        embeddings.push(data[0]);
+      }
+      return embeddings;
+    }
+
+    // Fonction pour calculer la similarité et regrouper les articles
+    function categorizeArticles(articles, embeddings) {
+      const threshold = 0.8; // Ajuster pour des regroupements plus ou moins stricts
+      const categories = [];
+
+      articles.forEach((article, idx) => {
+        const titleEmbedding = embeddings[idx];
+        let categoryFound = false;
+
+        for (const category of categories) {
+          const similarity = cosineSimilarity(category.embedding, titleEmbedding);
+          if (similarity >= threshold) {
+            category.articles.push(article);
+            categoryFound = true;
+            break;
+          }
+        }
+
+        if (!categoryFound) {
+          categories.push({ embedding: titleEmbedding, articles: [article] });
+        }
+      });
+
+      return categories.map((cat, index) => ({
+        category: `Sujet ${index + 1}`,
+        articles: cat.articles
+      }));
+    }
+
+    // Calcul de similarité cosinus entre deux embeddings
+    function cosineSimilarity(vecA, vecB) {
+      let dotProduct = 0;
+      let normA = 0;
+      let normB = 0;
+
+      for (let i = 0; i < vecA.length; i++) {
+        dotProduct += vecA[i] * vecB[i];
+        normA += vecA[i] ** 2;
+        normB += vecB[i] ** 2;
+      }
+      return dotProduct / (Math.sqrt(normA) * Math.sqrt(normB));
+    }
+
+    // Fonction pour afficher les catégories et articles
+    function displayCategories(categorizedArticles) {
       const container = document.getElementById("categories-container");
       container.innerHTML = "";
 
-      categories.forEach(category => {
+      categorizedArticles.forEach(category => {
         const categoryDiv = document.createElement("div");
         categoryDiv.className = "category";
 
@@ -82,14 +152,14 @@
           title.textContent = article.title;
 
           const img = document.createElement("img");
-          img.src = article.image || "default.jpg";
+          img.src = article.image_url || "default.jpg";
           img.alt = article.title;
 
           const snippet = document.createElement("p");
-          snippet.textContent = article.snippet;
+          snippet.textContent = article.description ? article.description.slice(0, 100) + "..." : "Pas de description";
 
           const link = document.createElement("a");
-          link.href = article.url;
+          link.href = article.link;
           link.textContent = "Lire l'article complet";
           link.target = "_blank";
 
@@ -104,6 +174,7 @@
       });
     }
 
+    // Charger les articles au démarrage
     fetchArticles();
   </script>
 </body>
